crates/celox/tests/snapshots/error_readability__combinational_loop_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
assertion_line: 20
expression: err
---
combinational_loop (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#combinational_loop)

  × combinational loop detected: y -> y
   ╭─[:6:20]
 5 │         ) {
 6 │             assign y = ~y & a;
   ·                    ┬
   ·                    ╰── involved in combinational feedback
 7 │         }
   ╰────


--- warnings ---

unassign_variable (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unassign_variable)

  ⚠ "y" is unassigned
   ╭─[:6:20]
 5 │         ) {
 6 │             assign y = ~y & a;
   ·                    ┬
   ·                    ╰── Error location
 7 │         }
   ╰────
  help:
