crates/celox/tests/snapshots/error_readability__multiple_driver_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: err
---
multiple_assignment (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#multiple_assignment)

  × "y" is assigned in multiple procedural blocks or assignment statements
   ╭─[:6:20]
 5 │         ) {
 6 │             assign y = a;
   ·                    ┬
   ·                    ╰── Assigned
 7 │             assign y = ~a;
   ·                    ┬
   ·                    ╰── Assigned
 8 │         }
   ╰────
  help: add `#[allow(multiple_assign)]` to the declaration of "y" if it is intentional
