crates/celox/tests/snapshots/error_readability__multiple_errors_readability.snap
---
source: crates/celox/tests/error_readability.rs
assertion_line: 62
expression: err
---
combinational_loop (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#combinational_loop)

  × combinational loop detected: y -> y
   ╭─[:8:20]
 7 │             assign x = ~x & a;
 8 │             assign y = ~y & a;
   ·                    ┬
   ·                    ╰── involved in combinational feedback
 9 │         }
   ╰────

combinational_loop (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#combinational_loop)

  × combinational loop detected: x -> x
   ╭─[:7:20]
 6 │         ) {
 7 │             assign x = ~x & a;
   ·                    ┬
   ·                    ╰── involved in combinational feedback
 8 │             assign y = ~y & a;
   ╰────


--- warnings ---

unassign_variable (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unassign_variable)

  ⚠ "x" is unassigned
   ╭─[:7:20]
 6 │         ) {
 7 │             assign x = ~x & a;
   ·                    ┬
   ·                    ╰── Error location
 8 │             assign y = ~y & a;
   ╰────
  help: 

unassign_variable (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unassign_variable)

  ⚠ "y" is unassigned
   ╭─[:8:20]
 7 │             assign x = ~x & a;
 8 │             assign y = ~y & a;
   ·                    ┬
   ·                    ╰── Error location
 9 │         }
   ╰────
  help:
