crates/celox/tests/snapshots/error_readability__mutable_for_bound_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: error.to_string()
---
mutable_for_bound

  × Loop continuation bound is not stable: the loop body may immediately modify state read by the continuation bound
   ╭─[:6:21]
 5 │                 limit = 4;
 6 │                 for _i in 0..limit {
   ·                     ─┬
   ·                      ╰── loop with an unstable continuation bound
 7 │                     limit = 1;
   ╰────
  help: copy the bound to a value that is not modified by the loop body
