crates/celox/tests/snapshots/error_readability__sv_module_missing_external_module_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: err
---
missing_external_module

  × External module `delay` was not supplied
