crates/celox/tests/snapshots/error_readability__time_advancing_for_bound_warning_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: render_diagnostic(warning)
---
time_advancing_for_bound

  ⚠ Loop continuation bound may change while simulation time advances: the loop body advances an event that may update
  │ state read by the continuation bound
    ╭─[:17:21]
 16 │             initial {
 17 │                 for _i in 0..count {
    ·                     ─┬
    ·                      ╰── loop with an unstable continuation bound
 18 │                     clk.next();
    ╰────
  help: copy the bound to a procedural let before entering the loop
